# python-utils

./: .gitignore  test.py
aigc/: anysize_to_960_1280.py  rename_image.py
aigc-learning/: .gitignore  CHEATSHEET.md  ENVIRONMENT.md  MAINTENANCE.md  README.md  THEORY.md  TROUBLESHOOTING.md  VERSION_MATRIX.md  requirements.txt
aigc-learning/01-python-foundations/: 00-python-engineering-theory.md  01-modern-python-basics.md  02-advanced-features.md  03-async-programming.md  04-type-hints.md  05-engineering-best-practices.md  README.md
aigc-learning/02-deep-learning-libraries/: 00-deep-learning-theory.md  01-pytorch-fundamentals.md  02-pytorch-training-loop.md  03-huggingface-transformers.md  04-huggingface-diffusers.md  05-transformer-from-scratch.md  06-transformer-principles-overview.md  README.md
aigc-learning/03-data-and-scientific-computing/: 01-numpy-essentials.md  (+5 more)
grounding_dino_sam/: readme.md  segment_with_text.py
head-pose-estimation/: detect_max_face.py  head_pose_estimation.py
investment-learning/: PROMPT.md  README.md
langgraph/: .env.example  README.md  demo.py  quickstart.py  readme.md  requirements.txt  test_quickstart.py
llamaindex/: test.py
olama/: DeepSeek.py  OlamaAPI.py  readme.md
pydantic_demo/: 111.py
sentry-llm/: README.md  config.example.toml  pyproject.toml
sentry-llm/sentry_llm/: __init__.py  cli.py  collector.py  config.py  models.py  service.py  storage.py  web.py
sentry-llm/tests/: test_core.py
temp/: catalog.html  create_directory.py  image_to_base64.py  jwt.py
test/: image_base64_output.txt  video_compressor.py
(+261 files in other folders)
