[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-llm"
version = "0.1.0"
description = "Lightweight machine metrics monitor for AI service nodes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "psutil>=5.9.0",
]

[project.scripts]
sentry-llm = "sentry_llm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentry_llm*"]
